--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -187,6 +187,15 @@
 }
 
 @layer components {
+  .hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
   .container {
     @apply mx-auto max-w-5xl px-4 sm:px-5 lg:px-6 2xl:px-10;
   }
